--- a/website/css/style.css
+++ b/website/css/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 #background{
-  background-size: cover;   
+  background-size: cover;
 }
 
 .container {
@@ -87,7 +87,7 @@ span.ng-scope{
 #content_center{
   width:100%;
   height: 577px;
- 
+
 }
 
 #content_center_header{
@@ -156,7 +156,7 @@ a:hover{
   display: inline-block;
   width: 100px;
   padding-left: 10px;
-  
+
 }
 
 #published{
@@ -166,7 +166,7 @@ a:hover{
 }
 
 #mark{
- 
+
   width:75px;
   color:green;
 
@@ -314,17 +314,32 @@ select {
   color: #0cc2aa;
 }
 
-#question{
+.question{
   width: 100%;
+  color: #fff;
   margin-left: -50px;
   height: auto;
   padding: 5px;
   text-decoration: none;
   background-color: #0cc2aa;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #018f7c;
 }
-#answer{
+.answer{
   width: 100%;
   margin-left: -50px;
   margin-top: 10px;
+}
+
+li.question{
+  text-decoration: none;
+  list-style: none;
+}
+
+ul.question{
+  text-decoration: none;
+  list-style: none;
+}
+
+a.question{
+  text-decoration: none;
 }
