--- a/noAngular/css/login.css
+++ b/noAngular/css/login.css
@@ -10,10 +10,12 @@ html {
 
 #background{
     background: url("img/bg.jpg");
+
     width:100%;
     height: 100%;
-    background-size: 900px 900px;
-   }
+    background-size: cover;
+    background-position: center;
+}
 .md-input-has-value{
   width:225px;
 }
